--- a/src/components/CampoTexto/CampoTexto.css
+++ b/src/components/CampoTexto/CampoTexto.css
@@ -1,7 +1,7 @@
 .campo-texto{
     margin: 24px 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     max-width: 100%;
